Fix broken footer on mobile

--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -91,17 +91,19 @@ h6
 footer
   background-color: #424242
   padding: 32px 16px
-  .footer-container
-    height: 36px
-    line-height: 36px
-    .left
-      .footer-logo
-        font-weight: 500
-        color: #fff
-        margin-right: 16px
-      a
-        margin-right: 16px
-        color: #9E9E9E
-    .right .social-btn
-      font-size: 25px
+  &.row
+    margin-bottom: 0
+  .footer-logo, .footer-links
+    margin-bottom: 20px
+  .footer-logo
+    color: #fff
+    font-weight: 500
+  .footer-links
+    a
+      color: #fff
       margin-right: 16px
+  .footer-social-buttons a
+    font-size: 25px
+    margin-right: 16px
+    @media (min-width: 992px)
+      float: right
